<resources>
    <string name="app_name">KiddleWaliMurid</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="semester">semester</string>
    <string name="kelas">Kelas</string>
    <string name="kognitif">Kognitif</string>
    <string name="aspek">Aspek</string>
    <!--String tambahan setelah refactor-->
    <string name="beranda">Beranda</string>
    <string name="jurnal">Jurnal</string>
    <string name="rapor">Rapor</string>
    <string name="spp">SPP</string>
    <string name="profil">Profil</string>
    <string name="selamat_datang">Selamat Datang</string>
    <string name="lorem_ipsum">"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vitae tellus feugiat, efficitur lacus nec, maximus felis. Maecenas ultrices tempor enim, et malesuada nisl lacinia eget. Integer arcu sapien, interdum nec neque sit amet, volutpat porta massa. Ut convallis purus lacus, ac tempor orci placerat vitae. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Nullam eu ipsum consequat, imperdiet nibh sit amet, imperdiet risus. Vestibulum a nunc sapien. Sed velit ipsum, fermentum non mi ac, scelerisque pharetra ligula."</string>
    <string name="kegiatan">Kegiatan</string>
    <string name="parenting">Parenting</string>
    <string name="materi">Materi</string>
    <string name="message_dialog_bantuan_login">ID Murid dan Kata Sandi didapatkan dengan menghubungi staf Tata Usaha atau datang ke sekolah</string>
    <string name="title_dialog_bantuan_login">Cara mendapatkan ID dan Password</string>
    <string name="positive_button_dialog">OK</string>
</resources>